# algokit-examples-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/phases/: 00-overview.md  01-discovery.md  02-extraction.md  03-distillation.md  04-generation.md  05-quality.md  06-refinement.md
dev-inputs/: README.md
scripts/: run_phase.py
src/: __init__.py  cli.py  config.py  main.py  workflow.py
src/agents/: __init__.py  distillation.py  extraction.py  generation.py  quality.py  refinement.py
src/models/: __init__.py  discovery.py  distillation.py  extraction.py  generation.py  phase_outputs.py  quality.py  refinement.py  workflow.py
src/nodes/: __init__.py  discovery.py  distillation.py  extraction.py  generation.py  quality.py  refinement.py
src/utils/: __init__.py  code_executor.py  file_reader.py  json_store.py
tests/: __init__.py  test_discovery.py  test_models.py  test_utils.py
