[project]
name = "algokit-examples-generator"
version = "0.1.0"
description = "AI-powered system to convert test files into runnable user-facing examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-ai>=1.6.0",
    "pydantic-graph>=1.6.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
algokit-examples-gen = "src.main:main"
